fix: dark mode scrollbar

--- a/src/stylesheets/body.scss
+++ b/src/stylesheets/body.scss
@@ -29,5 +29,9 @@ body {
 
 // Scrollbar
 .scrollbar-thin {
+  @apply scrollbar-track-gray-300 scrollbar-thumb-gray-400;
+}
+
+.dark.scrollbar-thin {
   @apply scrollbar-track-gray-700 scrollbar-thumb-gray-800;
 }
